--- a/ImageSharePHP/mainStyle.css
+++ b/ImageSharePHP/mainStyle.css
@@ -108,7 +108,7 @@ a {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    user-select: none;
+    /*user-select: none;*/
 }
 
 
