--- a/ImageSharePHP/mainStyle.css
+++ b/ImageSharePHP/mainStyle.css
@@ -52,7 +52,7 @@ a {
 
 	width:  100%;
 
-    min-height: 300px; /* Update with image height */
+    min-height: 100%; /* Update with image height */
 }
 
 #contents {
@@ -64,10 +64,8 @@ a {
 
 	width:  100%;
 
-    min-height: 500px;
+    min-height: 100%; /* Update with image height */
 }
-
-
 
 
 .menu-button {
@@ -86,7 +84,7 @@ a {
     height: 73px;
 }
 
-.middle-text {
+.middle {
     position: absolute;
 	left: 50%;
 	top: 45%;
@@ -119,12 +117,13 @@ a {
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
+    color: #FF2222;
 }
 
 #scroll {
     position: absolute;
 
-	color:				#FFFFFF;
+	color:  #FFFFFF;
 
 	width:	100%;
 	height: 100px;
@@ -158,7 +157,103 @@ a {
 	left: 50%;
 	transform: translate(-50%, 0%);
 
-
-
     /*background-color: #900909;*/
 }
+
+#comment-input {
+    color: #FEFEFE;
+    font-family: Verdana;
+    line-height: 15px;
+}
+
+.input-field {
+    border: 1px;
+    border-color: #060606;
+    box-shadow: 0 0 2px 2px #000;
+    border-radius: 3px;
+
+    float: right;
+
+    color: #FEFEFE;
+    font-family: Verdana;
+    font-size: 12px;
+    padding: 4px;
+
+    background-color: #2c2c2c;
+}
+
+textarea {
+    width: 100%;
+    resize: none;
+}
+
+.hint-text {
+    color: #999999 !important;
+    font-family: Verdana;
+    font-style: oblique;
+}
+
+
+button { 
+    color: #02140c; 
+    font: bold 85% 'Verdana', helvetica, sans-serif; 
+    border:1px solid; 
+    border-color: #696 #363 #363 #696;
+
+    padding: 5px 15px 5px 15px;
+
+    background: #363;
+    background: -webkit-linear-gradient(#696, #363);
+    background: -o-linear-gradient(#696, #363);
+    background: -moz-linear-gradient(#696, #363);
+    background: linear-gradient(#696, #363);
+}
+
+button:hover { 
+    color: #02140c; 
+    font: bold 85% 'Verdana', helvetica, sans-serif; 
+    border:1px solid; 
+    border-color: #696 #363 #363 #696;
+
+    padding: 5px 15px 5px 15px;
+
+    background: #696;
+    background: -webkit-linear-gradient(#8d8, #696);
+    background: -o-linear-gradient(#8d8, #696);
+    background: -moz-linear-gradient(#8d8, #696);
+    background: linear-gradient(#8d8, #696);
+}
+
+button:active { 
+    color: #02140c; 
+    font: bold 85% 'Verdana', helvetica, sans-serif; 
+    border:1px solid; 
+    border-color: #363 #696 #696 #363;
+
+    padding: 5px 15px 5px 15px;
+
+    background: #696;
+    background: -webkit-linear-gradient(#8d8, #696);
+    background: -o-linear-gradient(#8d8, #696);
+    background: -moz-linear-gradient(#8d8, #696);
+    background: linear-gradient(#8d8, #696);
+}  
+
+
+
+
+/*::-webkit-scrollbar
+{
+  width: 12px;  
+  height: 12px; 
+}
+
+::-webkit-scrollbar-track
+{
+  background: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb
+{
+  background: rgba(0, 0, 0, 0.5);
+}*/
